# SigilEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CMakeLists.txt  doxy.in
docs/dox/: extra.dox
docs/md/: engine.md
examples/: CMakeLists.txt
examples/FallingBlocks/: Workflow.md  components.hpp  config.json  falling_blocks.cpp
examples/Platformer/: Factories.cpp  Factories.hpp  PlatformerLevelOne.hpp  components.hpp  platformer.cpp
examples/resources/config_files/: platformerLevelOne.json  platformer_config.json
include/Sigil/: AssetManager.hpp  Engine.hpp  EngineFwd.hpp  Error.hpp  InitializerBase.hpp  MainLoop.hpp  Renderer.hpp  SceneBase.hpp  Sigil.hpp  Timer.hpp  config.hpp  engine.hpp  error.hpp  renderer.hpp
include/Sigil/Action/: ActionManager.hpp  ActionTypes.hpp  CallbackManager.hpp
include/Sigil/Asset/: Animation.hpp  AssetManager.hpp
include/Sigil/Core/: Attribute.hpp
include/Sigil/Event/: EventDispatcher.hpp  EventListener.hpp  EventTypes.hpp
include/Sigil/Scene/: SceneBase.hpp  SceneManager.hpp
src/: AssetManager.cpp  Engine.cpp  InitializerBase.cpp  MainLoop.cpp  Renderer.cpp  SceneBase.cpp  Timer.cpp  config.cpp  engine.cpp  renderer.cpp
src/Action/: ActionManager.cpp  CallbackManager.cpp
src/Asset/: Animation.cpp  AssetManager.cpp
src/Event/: EventDispatcher.cpp
src/Scene/: SceneBase.cpp  SceneManager.cpp
test/: CMakeLists.txt
test/Sigil/engine/: Engine.cpp
